<resources>
    <string name="app_name">Popular Movies</string>
    <string name="action_settings">Settings</string>
    <string name="action_high_rate">Ratings</string>
    <string name="action_high_popularity">Popularity</string>
    <string name="action_favourite">Favourite</string>
    <string name="title_activity_movie_details">Movie Details</string>
    <string name="movie_title">Title:</string>
    <string name="movie_ratings">Ratings:</string>
    <string name="movie_release_date">Released on:</string>
    <string name="movie_overview">Overview:</string>
    <string name="movie_reviews">Reviews:</string>
    <string name="movie_trailers">Trailers:</string>

    <string name="movie_review_empty">No review available</string>
    <string name="movie_review_more">Read More</string>
    <string name="movie_trailer_empty">No trailer available</string>
    <string name="movie_overview_empty">No overview available</string>
    <string name="movie_list_empty">No movies available</string>
    <string name="movie_detail_empty">Movie details not available</string>

    <string name="movie_details_separator">" | "</string>
</resources>
