<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:fillViewport="true">

        <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/colorGrey">

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                card_view:cardElevation="4dp"
                style="@style/card_view">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    style="@style/card_list_view">

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="250dp"
                        android:scaleType="fitXY"
                        android:id="@+id/image_detail_view" />

                    <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                        <TextView android:id="@+id/movie_title" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/movie_title_detail_text"/>
                    </LinearLayout>

                    <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView android:id="@+id/movie_release_date" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/movie_detail_text"/>
                        <TextView android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/movie_details_separator"
                            style="@style/movie_detail_text"/>
                        <TextView android:id="@+id/movie_ratings" android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            style="@style/movie_detail_text"/>
                    </LinearLayout>
                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/overview_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/card_view"
                card_view:cardElevation="4dp"
                style="@style/card_view">

                <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    style="@style/card_list_view">
                    <TextView android:id="@+id/movie_overview_text" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_overview"
                        style="@style/movie_detail_text_sup"/>
                    <TextView android:id="@+id/movie_overview" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/movie_overview"/>
                    <TextView android:id="@+id/movie_overview_show_more" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_review_more"
                        style="@style/read_more"/>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/reviews_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview_card_view"
                card_view:cardElevation="4dp"
                style="@style/card_view">

                <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_review_layout"
                    android:orientation="vertical"
                    style="@style/card_list_view">
                    <TextView android:id="@+id/movie_review_text" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_reviews"
                        style="@style/movie_detail_text_sup"/>
                    <TextView android:id="@+id/movie_review_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_review_empty"
                        style="@style/empty_view"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:id="@+id/trailers_card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/overview_card_view"
                card_view:cardElevation="4dp"
                style="@style/card_view">

                <LinearLayout xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/movie_trailer_layout"
                    android:orientation="vertical"
                    style="@style/card_list_view">
                    <TextView android:id="@+id/movie_trailer_text" android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_trailers"
                        style="@style/movie_detail_text_sup"/>
                    <TextView android:id="@+id/movie_trailer_empty"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/movie_trailer_empty"
                        style="@style/empty_view"/>

                </LinearLayout>
            </android.support.v7.widget.CardView>
            <TextView android:id="@+id/movie_details_empty"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_detail_empty"
                style="@style/empty_view"/>
        </LinearLayout>
</ScrollView>